tests/parser/validinput/lua.idp
procedure main(){
	s = "}#..{}"
	s2 = '}'
	return #s==6
}