tests/parser/invalidinput/invalidproc2.idp
procedure main(){
    test.;jf
    return 1
}